# dynamic_ecp

./: .gitignore  README.md
ann-benchmarks/install/: Dockerfile.ecp  old.Dockerfile.ecp
benchmarks-files/: algos.yaml  cleanup.py  data_export.py  eCP.py  utils.py
datasets/: random-xs-20-euclidean.hdf5
eCP/: .clang-format  CMakeLists.txt
eCP/app/: CMakeLists.txt  main.cpp
eCP/include/eCP/: debug_memory_tools.hpp  utilities.hpp
eCP/include/eCP/index/: eCP.hpp
eCP/main/: main.cpp
eCP/scripts/: build.sh  configure.sh
eCP/src/: CMakeLists.txt
eCP/src/eCP/debugging/: debug_tools.cpp  debug_tools.hpp
eCP/src/eCP/index/: eCP.cpp  maintenance.cpp  maintenance.hpp  pre-processing.cpp  pre-processing.hpp  query-processing.hpp
eCP/src/eCP/index/shared/: data_structure.cpp  data_structure.hpp  distance.cpp  distance.hpp  globals.cpp  traversal.cpp  traversal.hpp
eCP/src/eCP/utilities/: utilities.cpp  utilities.hpp
eCP/src/utilities/: utilities.cpp
eCP/swig/: CMakeLists.txt  eCP.i
eCP/tests/: CMakeLists.txt  eCP_tests.cpp  maintenance_tests.cpp  pre-processing_tests.cpp  query-processing_tests.cpp  traversal_tests.cpp  utilities_tests.cpp
eCP/tests/helpers/: testhelpers.cpp  testhelpers.hpp  testhelpers_tests.cpp
old_benchmarks-files/: algos.yaml  eCP.py
old_scripts/: ann-benchmark.sh  docker_clean.sh  ecp_run_local.sh
scripts/: ecp_install.sh  ecp_run_local.sh  gen_wrapper.sh  test_ecp.sh
scripts/annb/: data_export.py  utils.py
